fix: add package setuptools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ toml = {version = "^0.10.2", optional = true}
 bump2version = {version = "^1.0.1", optional = true}
 drfexts = "^1.1.4"
 click = "8.0.4"
+setuptools = "^68.0.0"
 
 [tool.poetry.extras]
 test = [
